<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erickcairdiel.koko.RImagenPerfilUsuario">

    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/continuar"
        android:drawableStart="@drawable/continuar"
        android:text="@string/btn_Continuar"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="lollipop"
        android:layout_marginRight="40dp" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_continuar"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="32dp"
        android:drawableStart="@drawable/regresar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/selecciona_una_imagen_de_perfil"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="64dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="151dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:layout_marginLeft="16dp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/cargar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@android:drawable/ic_menu_upload_you_tube"
        android:layout_marginLeft="64dp" />

</android.support.constraint.ConstraintLayout>
