<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erickcairdiel.koko.RdatosUsuarioGeneral">


    <EditText
        android:id="@+id/txt_ICorreo"
        android:layout_width="234dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Correo"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/txt_Correo"
        android:layout_width="234dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/correo_electronico"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/txt_ContrasenaL"
        android:layout_width="366dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/ingresa_la_contrase_a_para_tu_cuenta"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ICorreo"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="313dp"
        android:layout_height="35dp"
        android:layout_marginStart="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ContrasenaL"
        android:layout_marginLeft="19dp" />

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="312dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ingresa_tu_nombre_completo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/txt_nombreI"
        android:layout_width="309dp"
        android:layout_height="39dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nombre_apellido1"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre"
        tools:text="Nombre             Apellido"
        android:layout_marginLeft="19dp" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_continuar"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="32dp"
        android:drawableStart="@drawable/regresar" />
    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/continuar"
        android:drawableStart="@drawable/continuar"
        android:text="@string/btn_Continuar"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="lollipop"
        android:layout_marginRight="40dp" />


</android.support.constraint.ConstraintLayout>
