<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erickcairdiel.koko.RDatosTarjeta">

    <TextView
        android:id="@+id/txt_Ingrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/ingrese_los_datos_de_su_tarjeta"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="64dp" />

    <TextView
        android:id="@+id/txt_numtarjeta"
        android:layout_width="267dp"
        android:layout_height="27dp"
        android:layout_marginEnd="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/numero_de_tarjeta_16_digitos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_tarjeta1"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="128dp"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_continuar"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="32dp"
        android:drawableStart="@drawable/regresar" />

    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/continuar"
        android:drawableStart="@drawable/continuar"
        android:text="@string/btn_Continuar"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="lollipop"
        android:layout_marginRight="40dp" />

    <CheckBox
        android:id="@+id/checkBox_tarjeta1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/masterC"
        android:drawableStart="@drawable/masterC"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_tarjeta2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Ingrese"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="40dp" />

    <CheckBox
        android:id="@+id/checkBox_tarjeta2"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/visaT"
        android:drawableStart="@drawable/visaT"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_tarjeta3"
        app:layout_constraintStart_toEndOf="@+id/checkBox_tarjeta1"
        app:layout_constraintTop_toBottomOf="@+id/txt_Ingrese"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop" />

    <CheckBox
        android:id="@+id/checkBox_tarjeta3"
        android:layout_width="102dp"
        android:layout_height="67dp"
        android:layout_marginEnd="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/americanT"
        android:drawableStart="@drawable/americanT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox_tarjeta2"
        app:layout_constraintTop_toBottomOf="@+id/txt_Ingrese"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop"
        android:layout_marginRight="49dp"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/txt_numeroT"
        android:layout_width="265dp"
        android:layout_height="36dp"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_numtarjeta"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="130dp"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/txt_seguridad"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:layout_marginEnd="229dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_codigo"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="229dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="95dp"
        android:layout_height="27dp"
        android:layout_marginEnd="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/caducidad"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_seguridad"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="300dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/txt_codigo"
        android:layout_width="184dp"
        android:layout_height="27dp"
        android:layout_marginEnd="211dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/codigo_de_seguridad"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_numeroT"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="211dp"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/txt_anio"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/anio"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal"
        app:layout_constraintEnd_toStartOf="@+id/txt_mes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="13dp"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/txt_mes"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginEnd="249dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/mess"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="249dp" />

</android.support.constraint.ConstraintLayout>
