<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erickcairdiel.koko.RTipoDeCuenta">

    <Button
        android:id="@+id/btnConductor"
        android:layout_width="163dp"
        android:layout_height="65dp"
        android:layout_marginEnd="168dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/conductor"
        android:drawableStart="@drawable/conductor"
        android:text="@string/conductor"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEstudiante"
        android:layout_marginRight="168dp"
        android:layout_marginLeft="150dp"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btnEstudiante"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginEnd="154dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/estudiante"
        android:drawableStart="@drawable/estudiante"
        android:text="@string/estudiante"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Selecciona"
        android:layout_marginRight="154dp"
        android:layout_marginLeft="148dp"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/txt_Selecciona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="100dp"
        android:text="@string/selecciona_el_tipo_de_cuenta_a_crear"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="44dp" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="311dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/regresar"
        android:drawableStart="@drawable/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop"
        android:layout_marginRight="311dp"
        android:layout_marginLeft="32dp" />
</android.support.constraint.ConstraintLayout>
