<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erickcairdiel.koko.IngreseNumeroTelefonoMovil">


    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/continuar"
        android:drawableStart="@drawable/continuar"
        android:text="@string/btn_Continuar"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="lollipop"
        android:layout_marginRight="40dp" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#ffffff"
        android:drawableLeft="@drawable/regresar"
        android:drawableStart="@drawable/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_continuar"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/txt_Ingrese"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/ingresa_tu_numero_de_telefono_movil"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="32dp" />

    <EditText
        android:id="@+id/txt_Numero"
        android:layout_width="217dp"
        android:layout_height="45dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_Cincuenta"
        app:layout_constraintTop_toBottomOf="@+id/txt_Ingrese"
        android:layout_marginRight="28dp" />

    <EditText
        android:id="@+id/txt_Cincuenta"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_52"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Ingrese"
        android:layout_marginLeft="80dp" />

</android.support.constraint.ConstraintLayout>
